--- a/FizzBuzz.Test/FizzBuzz.Test.csproj
+++ b/FizzBuzz.Test/FizzBuzz.Test.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FizzBuzz.Domain\FizzBuzz.Domain.csproj" />
+    <ProjectReference Include="..\FizzBuzz.Core\FizzBuzz.Core.csproj" />
+  </ItemGroup>
+
 </Project>
